syntax = "proto3";

package envoy.extensions.http.early_header_mutation.regex_mutation.v3;

import "envoy/config/common/mutation_rules/v3/mutation_rules.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.http.early_header_mutation.regex_mutation.v3";
option java_outer_classname = "RegexMutationProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/http/early_header_mutation/regex_mutation/v3;regex_mutationv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Custom early header mutation extension]
// [#extension: envoy.http.early_header_mutation.regex_mutation]

// This extension allows for custom early header mutation by the regex match and rewrite.
// It is configured with a list of
// :ref:`header mutation <envoy_v3_api_msg_config.common.mutation_rules.v3.HeaderMutation>`.
message RegexMutation {
  repeated config.common.mutation_rules.v3.HeaderMutation header_mutations = 1
      [(validate.rules).repeated = {min_items: 1}];
}
